5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1667_2323.log
== TEST (2019-04-16 16:14:32) 
-- CODE:
bruxo = input("patrono: ")

if bruxo.upper() == "Sirius":
	espaco = 15.7654
	tempo = 1.3479

else bruxo.upper() == "Malfoy":
	espaco = 7.674
	tempo = 3.789
	
print(espaco/tempo)
-- ERROR:
File "XXXX", line 7
    else bruxo.upper() == "Malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:32) 
-- CODE:
bruxo = input("patrono: ")

if bruxo.upper() == "Sirius":
	espaco = 15.7654
	tempo = 1.3479

else bruxo.upper() == "Malfoy":
	espaco = 7.674
	tempo = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else bruxo.upper() == "Malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:58) 
-- CODE:
bruxo = input("patrono: ")

if bruxo.upper() == "Sirius":
	espaco = 15.7654
	tempo = 1.3479

else bruxo.upper() == "malfoy":
	espaco = 7.674
	tempo = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else bruxo.upper() == "malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:46) 
-- CODE:
bruxo = input("patrono: ")

if bruxo .upper() == "Sirius":
	espaco = 15.7654
	tempo = 1.3479

else bruxo .upper() == "malfoy":
	espaco = 7.674
	tempo = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else bruxo .upper() == "malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:24) 
-- CODE:
bruxo = input("patrono: ")

if bruxo == "Sirius".upper:
	espaco = 15.7654
	tempo = 1.3479

else bruxo .upper() == "malfoy":
	espaco = 7.674
	tempo = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else bruxo .upper() == "malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:07) 
-- CODE:
bruxo = input("patrono: ")

if bruxo == "Sirius".upper:
	espaco = 15.7654
	tempo = 1.3479

else bruxo == "Malfoy".upper:
	espaco = 7.674
	tempo = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else bruxo == "Malfoy".upper:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:47) 
-- CODE:
bruxo = input("patrono: ")

if (bruxo == "Sirius").upper:
	espaco = 15.7654
	tempo = 1.3479

else (bruxo == "Malfoy").upper:
	espaco = 7.674
	tempo = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else (bruxo == "Malfoy").upper:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:17) 
-- CODE:
bruxo = input("patrono: ")

if (bruxo == "Sirius").upper:
	e = 15.7654
	t = 1.3479

else (bruxo == "Malfoy").upper:
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else (bruxo == "Malfoy").upper:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:19) 
-- CODE:
bruxo = input("patrono: ")

if (bruxo == "Sirius").upper:
	e = 15.7654
	t = 1.3479

else (bruxo == "Malfoy").upper:
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else (bruxo == "Malfoy").upper:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:55) 
-- CODE:
bruxo = input("patrono: ")

if (bruxo == "Sirius").upper:
	e = 15.7654
	t = 1.3479

else (bruxo == "Sirus").upper:
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else (bruxo == "Sirus").upper:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:57) 
-- CODE:
bruxo = input("patrono: ")

if (bruxo == "Sirius").upper:
	e = 15.7654
	t = 1.3479

else (bruxo == "Sirus").upper:
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else (bruxo == "Sirus").upper:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:47) 
-- CODE:
bruxo = input("patrono: ")

if (bruxo == "Sirius").upper:
	e = 15.7654
	t = 1.3479

else:
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (bruxo == "Sirius").upper:
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:45) 
-- CODE:
bruxo = input("patrono: ")

if bruxo .upper == "Sirius"
	e = 15.7654
	t = 1.3479

else:
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 3
    if bruxo .upper == "Sirius"
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:55) 
-- CODE:
bruxo = input("patrono: ")

if bruxo.upper == "Sirius"
	e = 15.7654
	t = 1.3479

else:
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 3
    if bruxo.upper == "Sirius"
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:48) 
-- CODE:
bruxo = input("patrono: ").upper()

if bruxo == "Sirius"
	e = 15.7654
	t = 1.3479

else bruxo == "Malfoy"
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 3
    if bruxo == "Sirius"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:05) 
-- CODE:
bruxo = input("patrono: ").upper()

if bruxo == "Sirius":
	e = 15.7654
	t = 1.3479

else bruxo == "Malfoy":
	e = 7.674
	t = 3.789
	
print( espaco / tempo )
-- ERROR:
File "XXXX", line 7
    else bruxo == "Malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:21) 
-- CODE:
bruxo = input("patrono: ").upper()

if bruxo.upper == "Sirius":
	e = 15.7654
	t = 1.3479

else bruxo.upper() == "Malfoy":
	e = 7.674
	t = 3.789
	
print(e / t)
-- ERROR:
File "XXXX", line 7
    else bruxo.upper() == "Malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:29) 
-- CODE:
bruxo = input("patrono: ")

if bruxo.upper == "Sirius":
	e = 15.7654
	t = 1.3479

else bruxo.upper() == "Malfoy":
	e = 7.674
	t = 3.789
	
print(e / t)
-- ERROR:
File "XXXX", line 7
    else bruxo.upper() == "Malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:08) 
-- CODE:
bruxo = input("patrono: ")

if bruxo.upper() == "Sirius":
	e = 15.7654
	t = 1.3479

else bruxo.upper() == "Malfoy":
	e = 7.674
	t = 3.789
	
print(e / t)
-- ERROR:
File "XXXX", line 7
    else bruxo.upper() == "Malfoy":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:03) 
-- CODE:
bruxo = input("patrono: ")

if bruxo == .upper("Sirius"):
	e = 15.7654
	t = 1.3479

else bruxo == .upper("Malfoy"):
	e = 7.674
	t = 3.789
	
print(e / t)
-- ERROR:
File "XXXX", line 3
    if bruxo == .upper("Sirius"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:21) 
-- CODE:
bruxo = input("patrono: ")

if bruxo == .upper("sirius"):
	e = 15.7654
	t = 1.3479

else bruxo == .upper("malfoy"):
	e = 7.674
	t = 3.789
	
print(e / t)
-- ERROR:
File "XXXX", line 3
    if bruxo == .upper("sirius"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:12) 
-- CODE:
patrono = input("bruxo ")

if patrono == "sirius":
	e = 15.7654
	t = 1.3479

else patrono == "malfoy":
	e = 7.674
	t = 3.789
	
print(e / t)
-- ERROR:
File "XXXX", line 7
    else patrono == "malfoy":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:12) 
-- CODE:
patrono = input(.upper("bruxo: "))

if patrono == "sirius":
	e = 15.7654
	t = 1.3479

else:
	e = 7.674
	t = 3.789
	
print(e / t)
-- ERROR:
File "XXXX", line 1
    patrono = input(.upper("bruxo: "))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:52) 
-- CODE:
patrono = input("bruxo: ")

if patrono == "sirius":
	e = 15.7654
	t = 1.3479

else:
	e = 7.674
	t = 3.789
	
print(e / t)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:17) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	e = 15.7654
	t = 1.3479

else:
	e = 7.674
	t = 3.789
	
print(e / t)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:11) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else:
	m = 7.674
	
	s = 3.789
	
print(m / s)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:57) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else:
	m = 7.674
	
	s = 3.789
	
print(s/m)
-- OUTPUT:
0.4937451133698202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:53) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else patrono.upper == "malfoy":
	m = 7.674
	
	s = 3.789
	
print(s/m)
-- ERROR:
File "XXXX", line 7
    else patrono.upper == "malfoy":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:25) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654/1.3479

else patrono.upper == "malfoy":
	m = 7.674/3.789
	
print(m)
-- ERROR:
File "XXXX", line 6
    else patrono.upper == "malfoy":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:38) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654/1.3479

else:
	m = 7.674/3.789
	
print(m)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:57) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654/1.3479

else:
	m = 7.674/3.789
	
print(m)
-- EXECUTION TIME:
0.191072
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
2.0253365003958828
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:10) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654*1.3479

else:
	m = 7.674*3.789
	
print(m)
-- OUTPUT:
29.076786000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:35) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654/1.3479

else:
	m = 7.674/3.789
	
print(m)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:55) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else:
	m = 7.674
	s = 3.789
	
print(s/m)
-- OUTPUT:
0.4937451133698202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:24) 
-- CODE:
patrono = input("bruxo: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else:
	m = 7.674
	s = 3.789
	
print(m/s)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:30) 
-- CODE:
patrono = input("sirius ou malfoy: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else:
	m = 7.674
	s = 3.789
	
print(m/s)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:49:40) 
-- CODE:
patrono = input("sirius ou malfoy: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else:
	m = 7.674
	s = 3.789
	
print(m/s)
-- EXECUTION TIME:
0.211657
-- TEST CASE 1:
---- input:
MALFOY
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- TEST CASE 2:
---- input:
SIRIUS
---- correct output:
11.696268269159432
---- user output:
2.0253365003958828
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:40) 
-- CODE:
patrono = input("sirius ou malfoy: ")

if patrono.upper == "sirius":
	m = 157654
	s = 13479

else:
	m = 7.674
	s = 3.789
	
print(m/s)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:23) 
-- CODE:
patrono = input("sirius ou malfoy: ")

if patrono.upper == "sirius":
	m = 15.7654
	s = 1.3479

else:
	m = 7.674
	s = 3.789
	
print(m/s)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
